[gd_scene load_steps=9 format=3 uid="uid://2716lq2baj5t"]

[ext_resource type="Script" path="res://Scripts/PlayAgainButton.gd" id="1_4bf7n"]
[ext_resource type="Script" path="res://Scripts/GameOverScreen.gd" id="1_bywir"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_785cl"]
bg_color = Color(0.0745098, 0.101961, 0.211765, 1)

[sub_resource type="Animation" id="Animation_jfp8b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -1080)]
}

[sub_resource type="Animation" id="Animation_6d8km"]
resource_name = "animIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -1080), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0i5t3"]
_data = {
"RESET": SubResource("Animation_jfp8b"),
"animIn": SubResource("Animation_6d8km")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cj47a"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_at6oo"]
bg_color = Color(0.141176, 0.333333, 0.74902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[node name="GameOver" type="Panel"]
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1080.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_785cl")
script = ExtResource("1_bywir")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0i5t3")
}
speed_scale = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1200, 800)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -400.0
offset_right = 600.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Panel" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "CURRENT SCORE"

[node name="CurrentScore" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cj47a")

[node name="Panel2" type="Panel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cj47a")

[node name="Panel3" type="Panel" parent="VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cj47a")

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "HIGH SCORE"

[node name="HighScore" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1

[node name="Spacer" type="Panel" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayAgainButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_at6oo")
text = "PLAY AGAIN"
script = ExtResource("1_4bf7n")

[connection signal="button_up" from="VBoxContainer/HBoxContainer2/PlayAgainButton" to="VBoxContainer/HBoxContainer2/PlayAgainButton" method="_on_button_up"]
